# eBYrxcEAAzlY

./: .dockerignore  .env.prod  .gitignore  .nginx.conf.swp  Dockerfile  db.json  docker-compose-prod.yml  docker-compose.yml  docker_install.sh  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
BotInvest/: asgi.py  loguru_django.py  settings.py  urls.py  wsgi.py
admin_panel/: admin.py  apps.py  forms.py  models.py  report.py  report_data.rar  serializers.py  signals.py  urls.py  views.py
admin_panel/migrations/: 0001_initial.py  0002_tguser_number_account_tguser_passport_and_more.py  0003_alter_tguser_uniq_code_pdf.py  0004_yookassaconfig_alter_tguser_uniq_code_pdf.py  0005_tguser_expire_date_subscribe_tguser_subscribe.py  0006_report.py  0007_alter_report_month.py  0008_alter_report_user.py  0009_alter_report_options_report_created_at.py  0010_alter_tguser_expire_date_subscribe.py  0011_tguser_api_key_tguser_secret_key.py  0012_inviteuser_api_key.py  0013_tguser_address_registration_tguser_bank_bik_and_more.py  0014_inviteuser_workers_tguser_by_report_month_and_more.py  0015_workeruser.py  0016_tguser_status_asccount.py  0017_applicationsbuy_applicationssell.py  0020_alter_inviteuser_user.py  (+2 more)
bot/: api_via_btc.py  callback_factory.py  commands.py  create_pay.py  create_pdf.py  get_now_month.py  service_async.py  state_group.py  yookassa_schema.py  Агентский договор пример.docx
bot/heandlers/: .start.py.swp  (+1 more)
fastapi_app/: Dockerfile  __init__.py  app.py  bot.py  config.py  logger.py  requirements.txt
media/: messeges.py
ssl/: fullchain.crt  privkey.pem
(+11 files in other folders)
