[tool.poetry]
name = "botinvest"
version = "0.1.0"
description = ""
authors = ["Павел <p.mazikin@creonit.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-import-export = "^4.0.3"
apscheduler-di = "^0.1.0"
django-environ = "^0.11.2"
loguru = "^0.7.2"
aiogram = "^3.6.0"
psycopg2 = "^2.9.9"
pytz = "^2024.1"
yookassa = "^3.1.0"
redis = "^5.0.4"
pypdf2 = "^3.0.1"
reportlab = "^4.2.0"
tablib = {version = "3.5.0", extras = ["xlsx"]}
gunicorn = "^22.0.0"
ptext = "^1.1.0"
docx = "^0.2.4"
python-docx = "^1.1.2"
docx2pdf = "^0.1.8"
django-filter = "^24.2"

convertapi = "^1.8.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
